--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "express-handlebars": "^7.1.2",
+    "hbs": "^4.2.0",
+    "puppeteer": "^21.4.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
